# taskmanager

./: .gitignore  CMakeLists.txt  Dockerfile
proto/: Core.proto  Service.proto  Task.proto
src/: main.cpp  server.cpp
src/controller/: Action.cpp  Action.h  Controller.cpp  Controller.h
src/io/: AbstractPrinter.h  AbstractReader.h  ConsolePrinter.cpp  ConsolePrinter.h  ConsoleReader.cpp  ConsoleReader.h  FilePrinter.cpp  FilePrinter.h  FileReader.cpp  FileReader.h
src/logging/: Logger.cpp  Logger.h  LoggerUtils.cpp  LoggerUtils.h
src/model/: ActionResult.cpp  ActionResult.h  Context.cpp  Context.h  IDGenerator.cpp  IDGenerator.h  ModelInterface.h  Node.cpp  Node.h  Prompt.cpp  Prompt.h  State.cpp  State.h  StateFactory.cpp  StateFactory.h  Step.cpp  Step.h  StepFactory.cpp  StepFactory.h  Task.cpp  Task.h  Task.proto  TaskID.cpp  TaskID.h  TaskManager.cpp  TaskManager.h  TaskManagerInterface.h  help.txt  utils.cpp  utils.h
src/persistence/: FilePersistence.cpp  FilePersistence.h  Persister.cpp  Persister.h  PersisterInterface.h  Persistor.cpp  Persistor.h
src/transfer/: TaskManagerClient.cpp  TaskManagerClient.h  TaskManagerService.cpp  TaskManagerService.h
src/transport/: TaskManagerClient.cpp  TaskManagerGRPCClient.cpp  TaskManagerGRPCClient.h  TaskManagerGRPCService.cpp  TaskManagerGRPCService.h
src/ui/: Action.cpp  Action.h  ActionGetter.cpp  ActionGetter.h  Context.cpp  Context.h  Controller.cpp  Controller.h  ControllerInterface.h  Factory.cpp  Factory.h  Machine.cpp  Machine.h  Step.cpp  Step.h  StepFactory.cpp  StepFactory.h  StepSwitcher.cpp  StepSwitcher.h
src/ui/actions/: Action.h  ActionResult.cpp  ActionResult.h  AddSubtaskAction.cpp  AddSubtaskAction.h  AddTaskAction.cpp  AddTaskAction.h  ClearAllLabelsOfTaskAction.cpp  ClearAllLabelsOfTaskAction.h  ClearLabelOfTaskAction.cpp  ClearLabelOfTaskAction.h  CompleteTaskAction.cpp  CompleteTaskAction.h  DeleteTaskAction.cpp  DeleteTaskAction.h  DoNothingAction.cpp  DoNothingAction.h  EditTaskAction.cpp  EditTaskAction.h  GetAllTasksToShowAction.cpp  GetAllTasksToShowAction.h  GetTaskToShowByIDAction.cpp  GetTaskToShowByIDAction.h  GetTaskToShowLabelsAction.cpp  GetTaskToShowLabelsAction.h  GetTasksToShowAction.cpp  GetTasksToShowAction.h  GetTasksToShowByLabelAction.cpp  GetTasksToShowByLabelAction.h  GetTasksToShowLabelsAction.cpp  GetTasksToShowLabelsAction.h  LabelTaskAction.cpp  LabelTaskAction.h  LoadFromFileAction.cpp  LoadFromFileAction.h  ReadTaskWithChildrenAction.cpp  ReadTaskWithChildrenAction.h  SaveToFileAction.cpp  SaveToFileAction.h  ShowTasksAction.cpp  (+15 more)
src/ui/steps/: AddStep.cpp  AddStep.h  ClearAllLabelsStep.cpp  ClearAllLabelsStep.h  ClearLabelStep.cpp  ClearLabelStep.h  CompleteStep.cpp  CompleteStep.h  ConfirmDeleteStep.cpp  ConfirmDeleteStep.h  DeleteStep.cpp  DeleteStep.h  EditStep.cpp  EditStep.h  HelpStep.cpp  HelpStep.h  HomeStep.cpp  HomeStep.h  IOStep.cpp  IOStep.h  LabelStep.cpp  LabelStep.h  LabelsStep.cpp  LabelsStep.h  PrinterStep.cpp  PrinterStep.h  QuitStep.cpp  QuitStep.h  ReadTaskDataStep.cpp  ReadTaskDataStep.h  ShowAllLabelsStep.cpp  ShowAllLabelsStep.h  ShowStep.cpp  ShowStep.h  Step.cpp  Step.h  SubtaskStep.cpp  SubtaskStep.h  UncompleteStep.cpp  UncompleteStep.h  (+4 more)
src/utilities/: ActionResult.cpp  ActionResult.h  LabelUtils.cpp  LabelUtils.h  ModelInquiryResultUtils.cpp  ModelInquiryResultUtils.h  ModelRequestResultUtils.cpp  ModelRequestResultUtils.h  NodeUtils.cpp  NodeUtils.h  StepUtils.h  TaskEntityUtils.cpp  TaskEntityUtils.h  TaskIDUtils.cpp  TaskIDUtils.h  TaskUtils.cpp  TaskUtils.h
test/: main.cpp
test/controller/: ActionTest.cpp
test/model/: DISABLED_TaskManagerStressTest.cpp  IDGeneratorTest.cpp  NodeTest.cpp  TaskIDTest.cpp  TaskManagerStressTest.cpp  TaskManagerTest.cpp  TaskTest.cpp
test/persistence/: FilePersisterTest.cpp  PersisterTest.cpp  PersistorTest.cpp
test/transfer/: TaskManagerClinetTest.cpp  TaskManagerServiceTest.cpp
test/ui/: ActionTest.cpp  ContextTest.cpp  ControllerTest.cpp  IntegrationTest.cpp  MachineTest.cpp  StepTest.cpp
